--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.0.3",
+    "formidable": "^3.5.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
