--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swiper": "^11.0.7"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
