--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
     "formidable": "^3.5.1",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
