--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
     "formidable": "^3.5.1",
@@ -23,6 +24,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
