adding validate and login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "AMEZAN",
         "cloudinary",
+        "hookform",
         "KEMETIC",
+        "Signin",
         "Swiper",
         "unoptimized"
     ]
