--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "AMEZAN",
         "cloudinary",
+        "cpassword",
         "hookform",
         "KEMETIC",
         "Signin",
+        "signup",
         "Swiper",
         "unoptimized"
     ]
