adding migrate dev

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DATABASE_URL="postgresql://postgres:214290@localhost:5432/store"
 CLOUDINARY_CLOUD_NAME = 'deyd2dr81' 
 CLOUDINARY_API_KEY = '742792496577367' 
 CLOUDINARY_API_SECRET ='TIRx_67sBzt434kmi9fsRLnLz0o'
+JWT_SECRET= "qwertyuiojhgfs"
