--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.5",
     "swiper": "^11.0.7",
+    "use-local-storage-state": "^19.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
