designing faq page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "AMEZAN",
         "Cartitems",
         "cloudinary",
+        "Codepen",
         "cpassword",
         "hookform",
         "KEMETIC",
