--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Abouts",
         "AMEZAN",
         "Cartitems",
         "cloudinary",
@@ -10,6 +11,7 @@
         "primaryclr",
         "Signin",
         "signup",
+        "storys",
         "Swiper",
         "textclr",
         "unoptimized"
