--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:214290@localhost:5432/store"
+DATABASE_URL='postgresql://store_owner:mBZDw2JC9Iaj@ep-rapid-sunset-a2tcx70l.eu-central-1.aws.neon.tech/store?sslmode=require'
 CLOUDINARY_CLOUD_NAME = 'deyd2dr81' 
 CLOUDINARY_API_KEY = '742792496577367' 
 CLOUDINARY_API_SECRET ='TIRx_67sBzt434kmi9fsRLnLz0o'
