--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL='postgresql://store_owner:mBZDw2JC9Iaj@ep-rapid-sunset-a2tcx70l.eu-central-1.aws.neon.tech/store?connect_timeout=20&pool_timeout=20'
-# CLOUDINARY_CLOUD_NAME = 'deyd2dr81' 
-# CLOUDINARY_API_KEY = '742792496577367' 
-# CLOUDINARY_API_SECRET ='TIRx_67sBzt434kmi9fsRLnLz0o'
-# JWT_SECRET= "qwertyuiojhgfs"
+DATABASE_URL='postgresql://store_owner:mBZDw2JC9Iaj@ep-rapid-sunset-a2tcx70l.eu-central-1.aws.neon.tech/store?connect_timeout=20&pool_timeout=20'
+CLOUDINARY_CLOUD_NAME = 'deyd2dr81' 
+CLOUDINARY_API_KEY = '742792496577367' 
+CLOUDINARY_API_SECRET ='TIRx_67sBzt434kmi9fsRLnLz0o'
+JWT_SECRET= "qwertyuiojhgfs"
