--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ CLOUDINARY_CLOUD_NAME = 'deyd2dr81'
 CLOUDINARY_API_KEY = '742792496577367' 
 CLOUDINARY_API_SECRET ='TIRx_67sBzt434kmi9fsRLnLz0o'
 JWT_SECRET= "qwertyuiojhgfs"
+GOOGLE_CLIENT_ID="1045489664940-m8qvl7m9a0n8pgj9pnm97pgj3n4s2672.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
