--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "cloudinary",
         "Codepen",
         "cpassword",
+        "heroicons",
         "hookform",
         "KEMETIC",
         "primaryclr",
