--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
     "formidable": "^3.5.1",
-    "next": "14.1.3",
+    "next": "^15.0.3",
     "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fontawesome-svg-icon": "^1.1.2",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
