--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "heroicons",
         "hookform",
         "KEMETIC",
+        "nextauth",
         "primaryclr",
         "Signin",
         "signup",
